# ClearBrain

./: .gitignore  README.md  pyproject.toml
scripts/: get_spinal_centerline.py  get_spinal_sections.py  handle_clear.py  spinal_cord_10_axial_cuts_2000x2000_density_grid.py  spinal_cord_orientation_line.py  spinal_cord_orientation_line_with_10_axial_cuts_2000x2000.py
src/clearbrain/: ClearData.py  __init__.py  filter.py  io.py  plot_data.py  plots.py
src/clearbrain/centerline/: __init__.py  plot_centerline.py  plots.py
src/clearbrain/save/: __init__.py
src/clearbrain/sections/: __init__.py  plot_sections.py  sections.py
