[project]
name = "clearbrain"
version = "0.1.0"
description = "Everything that is needed to analyse clear brain data"
authors = [
    {name = "GuilhermeCF",email = "guilherme.henriquesdacostaferreira@epfl.ch"}
]
readme = "README.md"
requires-python = "=3.11,<3.12""
dependencies = [
]

[tool.poetry]
packages = [{include = "clearbrain", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
